# dicomqc

./: .gitignore  CHANGELOG.md  DICOMQC_Project_Specification.md  LICENSE  README.md  RELEASING.md  pyproject.toml  pytest.ini
.github/workflows/: build-and-test.yml  documentation.yml  publish-pypi.yml  publish-testpypi.yml
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: overview.md
docs-site/docs/about/: citation.md  disclaimer.md  prior-work.md
docs-site/docs/reference/: cli.md
docs-site/docs/technical-details/: architecture.md  architecture.mdx  extending-dicomqc.md
docs-site/docs/usage/: install.md  ms-mri-workflow.md  ms-mri-workflow.mdx  quickstart.md  remediation.md  remediation.mdx  reports.md
docs-site/scripts/: check-docs.mjs
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
examples/multiqc/: README.md  multiqc_config.yaml  run_example.sh
examples/multiqc/assets/: dicomqc_multiqc.css
examples/multiqc/output/dicom/: private_tags.dcm  pseudonymized.dcm  raw_phi.dcm
examples/multiqc/output/dicomqc/: findings.csv  report.json
examples/multiqc/output/dicomqc/dicomqc_mqc/: dicomqc_00_overview_mqc.html  dicomqc_01_release_status_mqc.yaml  dicomqc_02_findings_mqc.yaml  dicomqc_summary_mqc.yaml
scripts/: capture_multiqc_screenshots.js  make_dicom_fixtures.py
src/dicomqc/: __init__.py  cli.py  demo.py  fixtures.py  scanner.py
src/dicomqc/backend/: __init__.py  base.py  pydicom_backend.py
src/dicomqc/model/: __init__.py  metadata.py  results.py
src/dicomqc/reports/: __init__.py  csv.py  json.py  multiqc.py
src/dicomqc/rules/: __init__.py  builtin.py
tests/: test_backend.py  test_cli.py  test_dcmtk_integration.py  test_demo.py  test_fixture_generator.py  test_multiqc.py  test_multiqc_example.py  test_reports.py  test_rules.py  test_scanner.py
tests/fixtures/dicom/: README.md
