[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomqc"
version = "0.1.0"
description = "Policy-driven quality control and validation of DICOM metadata for research release."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Manuel Rueda, CNAG"}
]
keywords = ["dicom", "quality-control", "de-identification", "pseudonymization", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "pydicom>=2.4",
  "PyYAML>=6",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
dicomqc = "dicomqc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
