[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomqc"
version = "0.1.0"
description = "Policy-driven quality control and validation of DICOM metadata for research release."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "Manuel Rueda, CNAG"}
]
keywords = ["dicom", "quality-control", "de-identification", "pseudonymization", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "pydicom>=2.4",
  "PyYAML>=6",
]

[project.urls]
Homepage = "https://github.com/CNAG-Biomedical-Informatics/dicomqc"
Documentation = "https://cnag-biomedical-informatics.github.io/dicomqc/"
Repository = "https://github.com/CNAG-Biomedical-Informatics/dicomqc"
Issues = "https://github.com/CNAG-Biomedical-Informatics/dicomqc/issues"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
]
release = [
  "build>=1.2",
  "twine>=5",
]

[project.scripts]
dicomqc = "dicomqc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
